fix report style

--- a/report.mkd
+++ b/report.mkd
@@ -1,15 +1,3 @@
-Dependency Injection vs Abstract Factory
-=====
-
-
-
-Принципиально Depenendency Injection (ID) и Abstract Factory (AF) решают схожую задачу - подключение внешнего кода с необходимым функционалом.
-
-
-
-
-
----------
 Part 1. Dependency Injection 
 ====================
 
@@ -19,8 +7,8 @@ Part 1. Dependency Injection
 
 *Если слушатели знают Factory, переключаемся на 3 пункт сразу.*
 
-1. Хардкод, или класс как контейнер с методами.
----------
+Слайд 1. Хардкод, или класс как контейнер с методами.
+----------------------
 
 Итак, самый простой пример:
 
@@ -46,8 +34,9 @@ Part 1. Dependency Injection
 Проблемы: Невозможно тестировать, со временем размер класса будет стремиться в бесконечность.
 
 
-2. Обычный ООП, разделяем на 2 класса.
----------
+Слайд 2. Обычный ООП, разделяем на 2 класса.
+----------------------
+
 <pre>
 
     class User
@@ -82,8 +71,9 @@ Part 1. Dependency Injection
 </pre>
 Добавился новый класс, появилась инкапсуляция работы с сессиями в отдельном классе. Но все еще сложно тестировать, нам нужно подключать разные хранилища.
 
-3. Abstract Factory. 
+Слайд 3. Abstract Factory. 
 ----------------------
+
 <pre>
     class User
     {
@@ -120,8 +110,9 @@ Part 1. Dependency Injection
 
 Теперь используем Factorу, чтобы проще было менять тип хранилища. Уже лучше, но объект все еще создается в конструкторе.
 
-4. Dependency Injection через конструктор.
-------------------
+Слайд 4. Dependency Injection через конструктор.
+----------------------
+
 <pre>
 
     class User
@@ -160,8 +151,8 @@ Part 1. Dependency Injection
 
 Однако мы не решили еще одну проблему, что если нет необходимости использовать сессию, а только класс User?
 
-4. Dependency Injection через setter/getter.
-------------------
+Слайд 5. Dependency Injection через setter/getter.
+----------------------
 
 <pre>
 
@@ -202,13 +193,15 @@ Part 1. Dependency Injection
 
 Лучше, мы не грузим класс, но теперь нужно следить чтобы был своевременно подгружен класс.
 
-5. Итак, что же DI?
---------------
+Слайд 6. Итак, что же DI?
+----------------------
+
 DI это прием когда, компоненты получают свои зависимости через конструктор, методы или непосредственно в свойства.
 
 
-6. Inversion of control. Прослойка между классом и DI.
-------------------
+Слайд 7. Inversion of control. Прослойка между классом и DI.
+----------------------
+
 **Показать реализацию IoC**
 
 Используя IoC получаем мы полностью выносим внешнюю библиотеку за класс.
@@ -227,5 +220,3 @@ DI это прием когда, компоненты получают свои 
 
 </pre>
 
-Part 2. Closures.
-========================
