Refactored Slides, added speech

--- a/report.mkd
+++ b/report.mkd
@@ -1,13 +1,11 @@
 Inversion of control.
 ====================
 
-От хардкода к Dependency Injection
+Каждый из нас когда-либо занимался интеграцией стороннего кода в свое веб приложение, хочу показать одину из возможных реализаций. Возьмем простую систему User и SessionStore (слайд 1).
 
-Паттерны программирования позволяют создать тестируемый, стабильный код. Я хочу показать эволюцию от простого к сложному, на примере класса User и подключения сессий.
+Если вы знаете что такое Factory, переходите к Шагу 3.
 
-*Если слушатели знают Factory, переключаемся на 3 пункт сразу.*
-
-Слайд 1. Хардкод, или класс как контейнер с методами.
+Шаг 1. Хардкод, или класс как контейнер с методами.
 ----------------------
 
 Итак, самый простой пример:
@@ -199,7 +197,7 @@ Inversion of control.
 DI это прием когда, компоненты получают свои зависимости через конструктор, методы или непосредственно в свойства.
 
 
-Слайд 7. Container. Прослойка между классом и DI.
+Слайд 7. Service Locator или DI Container.
 ----------------------
 
 В реальной ситуации необходимо подключение нескольких сервисов к классу, нам нужен контейнер содержащий много классов или Service Locator.
