Check Speech spell

--- a/speech.mkd
+++ b/speech.mkd
@@ -5,7 +5,7 @@ Inversion of control.
 
 Слайд 2. Наша задача реализовать хранилище данных для сущности User, в большинстве случаев используется паттерн Factory. Однако есть один минус, классы связаны, объект хранилища создается в User, что плохо влияет на возможность повторного использования или тестирования объекта User.
 
-Слайд 3. Чтобы повысить качество кода, выносим инициацию объекта за пределы класса User. Здесь же появляет дополнительный плюс, мы можем использовать различные настройки для различных типов хранилищ. Здесь показана иньъекция зависимости через конструктор.
+Слайд 3. Чтобы повысить качество кода, выносим инициацию объекта за пределы класса User. Здесь же появляется дополнительный плюс, мы можем использовать различные настройки для различных типов хранилищ. Здесь показана инъекция зависимости через конструктор.
 
 Слайд 4. Аналогичная идея, только используем setter для установки зависимости.
 
@@ -17,6 +17,6 @@ Inversion of control.
 
 Слайд 8. Все сервисы должны быть сконфигурированны перед использованием и хранятся в одном контенере. Данный подход очень гибкок, и позволяет держать конфигурации сервисов в простой форме.
 
-Слайд 9. Более того, зачастую в классе User хранится информация об правах пользователей, данных авторизованного пользователя и т.д. Поэтому полезно такой класс зарегистрировать как сервис и использовать, например, в контроллере MVC.
+Слайд 9. Более того, зачастую в классе User хранится информация о правах пользователей, данных авторизованного пользователя и т.д. Поэтому полезно такой класс зарегистрировать как сервис и использовать, например, в контроллере MVC.
 
 Окончание. Данный паттерн широко используется в Symfony2. Всем спасибо.
