--- a/speech.mkd
+++ b/speech.mkd
@@ -1,7 +1,11 @@
 Inversion of control.
 ====================
 
-Каждый из нас когда-либо занимался интеграцией стороннего кода в свое веб приложение, хочу показать одину из возможных реализаций. Возьмем простую систему User и SessionStore (слайд 1).
+Здравствуйте, меня зовут Сидоров Александр.
+
+Хочу рассказать об инверсии контроля в php, прием позволяющий создавать масштабируемый, тестируемый код.
+
+Слайд 1. Возьмем простую систему User и SessionStore (слайд 1).
 
 Слайд 2. Наша задача реализовать хранилище данных для сущности User, в большинстве случаев используется паттерн Factory. Однако есть один минус, классы связаны, объект хранилища создается в User, что плохо влияет на возможность повторного использования или тестирования объекта User.
 
