--- a/speech.mkd
+++ b/speech.mkd
@@ -13,14 +13,14 @@ Inversion of control.
 
 Слайд 4. Аналогичная идея, только используем setter для установки зависимости.
 
-Слайд 5. DI – это прием когда, компоненты получают свои зависимости через конструктор, методы или непосредственно в свойства. Основная цель - ослабление зависимости одного компонента кода от другого.
+Слайд 5. DI – это паттерн, позволяющтй передавать зависимости через конструктор, методы или непосредственно через свойства. Основная цель - ослабление зависимости одного компонента приложения от другого.
 
-Слайд 6. В реальной ситуации всегда необходимо взаимодействие множества подсистем, для этого используем контейнер зависимостей, также он называется ServiceLocator, Dependency Injection Container.
+Слайд 6. В реальной ситуации всегда необходимо взаимодействие множества подсистем, для этого используется контейнер зависимостей, также он называется ServiceLocator, Dependency Injection Container.
 
-Слайд 7. Для реализации контейнера нужно в User передать всего одну зависимость - контейнер. 
+Слайд 7. Вместо регистрации каждой зависимости, мы передаем в класс контейнер. 
 
-Слайд 8. Все сервисы должны быть сконфигурированны перед использованием и хранятся в одном контенере. Данный подход очень гибкок, и позволяет держать конфигурации сервисов в простой форме.
+Слайд 8. Все сервисы должны быть сконфигурированны перед использованием и хранятся в одном контенере. Однако создание экземпляров происходит когда это необъодимо.  Данный подход очень гибкок, и позволяет держать конфигурации сервисов в простой форме - ini, xml, yaml.
 
-Слайд 9. Более того, зачастую в классе User хранится информация о правах пользователей, данных авторизованного пользователя и т.д. Поэтому полезно такой класс зарегистрировать как сервис и использовать, например, в контроллере MVC.
+Слайд 9. Зачастую в классе User хранится информация о правах пользователей, авторизация и т.д. Поэтому полезно такой класс зарегистрировать как сервис и использовать, например, в контроллере MVC.
 
-Окончание. Данный паттерн широко используется в Symfony2. Всем спасибо.
+Данный паттерн широко используется в Symfony2. Всем спасибо.
